kubernetes/deploy.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: chatgpt-web  
  labels:  
    app: chatgpt-web  
spec:  
  replicas: 1  
  selector:  
    matchLabels:  
      app: chatgpt-web  
  strategy:  
    type: RollingUpdate  
  template:  
    metadata:  
      labels:  
        app: chatgpt-web  
    spec:  
      containers:  
        - image: chenzhaoyu94/chatgpt-web:specific-tag # 使用具体的镜像标签  
          name: chatgpt-web  
          imagePullPolicy: Always  
          ports:  
            - containerPort: 3002  
          resources:  
            limits:  
              cpu: 500m  
              memory: 500Mi  
            requests:  
              cpu: 300m  
              memory: 300Mi  
          readinessProbe: # 添加就绪探针  
            httpGet:  
              path: /health  
              port: 3002  
            initialDelaySeconds: 10  
            periodSeconds: 10  
          livenessProbe: # 添加存活探针  
            httpGet:  
              path: /health  
              port: 3002  
            initialDelaySeconds: 15  
            periodSeconds: 20  
---
apiVersion: v1  
kind: Service  
metadata:  
  labels:  
    app: chatgpt-web  
  name: chatgpt-web  
spec:  
  ports:  
    - name: chatgpt-web  
      port: 3002  
      protocol: TCP  
      targetPort: 3002  
  selector:  
    app: chatgpt-web  
  type: ClusterIP # 根据需要更改为NodePort或LoadBalancer
